2010-04-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Synchronize popup menu and plugin preferences dialog 'Show Hidden
   Files' option (fixes #2989288).


2010-04-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/entry.c, tagmanager/entry.h,
   tagmanager/include/tm_source_file.h, tagmanager/parse.c,
   tagmanager/parse.h, tagmanager/tm_source_file.c:
   Add tm_source_file_set_tag_arglist() to manually set the argument
   list of a tag.
 * tagmanager/python.c:
   Use tm_source_file_set_tag_arglist() to set the argument list
   field of Python class tags to the argument list of their
   __init__() methods.
   Backport a fix from CTags SVN to prevent possible crashes by trying
   to free NULL pointers.


2010-04-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/txt2tags.c:
   Remove duplicate code from Txt2Tags parser.
   Remove the title control characters ('=') when parsing titles.
   Also parse numbered titles (closes #2984703).
 * doc/geany.html, doc/geany.txt, src/keybindings.c, src/keybindings.h,
   src/plugindata.h:
   Add 'Remove Markers' and 'Remove Error Indicators' keybindings.
   Add missing documentation for 'Reset Zoom' keybinding.
 * tagmanager/php.c:
   Another attempt to fix the PHP parser regexp for parsing functions.
   Fix wrong parsing of function arguments when those contain nested
   brackets (as reported by Harold Aling).
 * src/notebook.c:
   Fix Ctrl-Click on notebook tab if Numpad is active.


2010-04-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, doc/geany.txt, plugins/geanyfunctions.h,
   src/callbacks.c, src/interface.c, src/keyfile.c, src/plugindata.h,
   src/plugins.c, src/prefs.c, src/toolbar.c, src/toolbar.h,
   src/ui_utils.c, src/ui_utils.h:
   Add option 'System Default' for toolbar icon style and size to
   use the GTK default value.
 * geany.glade, src/callbacks.c, src/callbacks.h, src/interface.c,